manifests/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database

---
apiVersion: v1
kind: Namespace
metadata:
  name: backend

---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
