manifests/quotes-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quotes-api-deployment
  namespace: backend
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: quotes-api
  template:
    metadata:
      labels:
        app: quotes-api
    spec:
      containers:
        - name: quotes-api
          image: prashansajoshi/quotes-api:latest 
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: backend
spec:
  selector:
    app: quotes-api
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
