manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: my.quotes.com
    secretName: my-quotes-cert-tls
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: quotes-frontend-service
            port: 
              number: 5002
